the put api for banner made
